eliminare functii nefolosite, adaugare .md